(lang dune 3.6)

(name binary_heap)

(generate_opam_files true)

(source
 (github JustinH11235/functional-heaps))

(authors "Justin")

(maintainers "Justin")

(license LICENSE)

(documentation https://github.com/JustinH11235/functional-heaps#readme)

(package
 (name binary_heap)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
